force-app/main/default/objects/Environmental_Consultant__c/Environmental_Consultant__c.object-meta.xml
<CustomObject>
    <description>Profile for environmental consultants of GR.  The profile is for all GR staff including environmental scientists, hydrogeologists, environmental engineers, field technicians, etc.</description>
    <label>Environmental Consultant</label>
    <nameField>
        <label>Environmental Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environmental Consultants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>