force-app/main/default/objects/Environmental_Consultant__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <description>Family name of an environmental consultant.  Cannot be blank.</description>
    <inlineHelpText>Family name</inlineHelpText>
    <label>Family Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>