force-app/main/default/objects/Environmental_Consultant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of an environmental consultant.</description>
    <inlineHelpText>First name</inlineHelpText>
    <label>First Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>