force-app/main/default/objects/Environmental_Consultant__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Job titles of GR.</description>
    <inlineHelpText>Job Title</inlineHelpText>
    <label>Job Title</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Environmental Scientist</fullName>
                <default>true</default>
                <label>Environmental Scientist</label>
            </value>
            <value>
                <fullName>Hydrogeologist</fullName>
            </value>
            <value>
                <fullName>Field Technician</fullName>
            </value>
            <value>
                <fullName>Drafting Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>