force-app/main/default/objects/Environmental_Consultant__c/recordTypes/Air_Group.recordType-meta.xml
<RecordType>
    <fullName>Air_Group</fullName>
    <active>true</active>
    <description>Air Group</description>
    <label>Air Group</label>
</RecordType>