force-app/main/default/objects/Environmental_Consultant__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Environmental consultant general</description>
    <label>General</label>
</RecordType>