force-app/main/default/objects/Environmental_Consultant__c/validationRules/FirstName_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Rule</fullName>
    <active>true</active>
    <description>The first name rule specifies that the first name can not be blank.</description>
    <errorConditionFormula>ISBLANK(First_Name__c )</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First Name is required!</errorMessage>
</ValidationRule>