force-app/main/default/objects/Environmental_Consultant__c/validationRules/myValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>myValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>LastActivityDate   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Regions__c</errorDisplayField>
    <errorMessage>Invalid record!</errorMessage>
</ValidationRule>