force-app/main/default/objects/Environmental_Consultant__c/listViews/Air_Group_Environmental_Consultant.listView-meta.xml
<ListView>
    <fullName>Air_Group_Environmental_Consultant</fullName>
    <filterScope>Queue</filterScope>
    <label>Air Group</label>
    <queue>Air_Group</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>